5 коммит , добавил пару вьюх + форма на логин

--- a/qwizmain/templates/home.html
+++ b/qwizmain/templates/home.html
@@ -9,5 +9,11 @@
 
 {% block content %}
 
+<div class="welcome-text">
+  <h1>Welcome to Qwiz!</h1>
+  <p>Test your knowledge with our fun and challenging quizzes. Choose from a variety of topics, and see how you stack up against other players.</p>
+  <a href="quiz.html" class="start-button">Get started</a>
+</div>
+
 
 {% endblock %}
