--- a/qwizmain/templates/base.html
+++ b/qwizmain/templates/base.html
@@ -1,4 +1,5 @@
 <!doctype html>
+{% load static %}
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -13,7 +14,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
   </head>
-  <body>
+  <body >
 
 
   {% include './blocks/navigate.html' %}
@@ -22,6 +23,9 @@
 
 
 {% block content %}
+
+
+
 {% endblock %}
 
 
