--- a/qwizmain/templates/blocks/navigate.html
+++ b/qwizmain/templates/blocks/navigate.html
@@ -11,10 +11,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a href="#" class="nav-link">Главная</a>
+            <a href="{% url 'home' %}" class="nav-link">Главная</a>
           </li>
           <li class="nav-item ">
             <a href="#" class="nav-link">Контакты</a>
+          </li>
+            <li class="nav-item ">
+            <a href="http://127.0.0.1:8000/admin" class="nav-link">Админка</a>
           </li>
         </ul>
         <form action="" class="form-inline my-2 my-lg-0">
