--- a/qwizmain/templates/home.html
+++ b/qwizmain/templates/home.html
@@ -11,8 +11,17 @@
 
 <div class="welcome-text">
   <h1>Welcome to Qwiz!</h1>
-  <p>Test your knowledge with our fun and challenging quizzes. Choose from a variety of topics, and see how you stack up against other players.</p>
-  <a href="quiz.html" class="start-button">Get started</a>
+  <p>Test your knowledge with our fun and challenging quizzes. Choose from a variety of topics, and see how you stack up against other players.
+  To continue please login</p>
+  {% if user.is_authenticated %}
+  <a href="" class="start-button">Start</a>
+  {% else %}
+    <a href="{% url 'signin' %}" class="start-button">SignIn</a> or
+    <a href="" class="start-button">SignUp</a>
+  {% endif %}
+
+
+
 </div>
 
 
