--- a/qwizmain/static/css/style.css
+++ b/qwizmain/static/css/style.css
@@ -17,7 +17,15 @@ body {
   background-image: url("https://images.ctfassets.net/usf1vwtuqyxm/5cr4lVBZ2k1il5kgkj0op8/68fcc40c97192a3dbaaa20ea5153c7bf/Quizzes-Hub-Copy-compressor.png?fm=jpg&q=70&w=2560");
   background-repeat: no-repeat;
   background-size: cover;
+  color:white;
 }
+
+
+
+
+
+
+
 
 
 
@@ -64,4 +72,58 @@ body {
 .messages {
   padding-top:30px;
   color: white;
+}
+
+
+form {
+margin-top: 50px;
+margin-left: 50px}
+
+
+
+
+
+
+
+#support {
+			display: none;
+			position: fixed;
+			bottom: 20px;
+			right: 20px;
+			background-color: white;
+			padding: 20px;
+			box-shadow: 0px 0px 10px grey;
+			border-radius: 5px;
+			z-index: 9999;
+		}
+
+#support .close {
+			position: absolute;
+			top: 10px;
+			right: 10px;
+			cursor: pointer;
+			color: #aaa;
+			font-size: 24px;
+		}
+
+
+
+ #post_value {
+    background-color: transparent;
+    color: white;
+    padding: 10px 20px;
+    border: 2px solid white;
+    border-radius: 5px;
+    font-size: 16px;
+    transition: all 0.2s ease-in-out;
+  }
+
+  #post_value:hover {
+    background-color: green;
+    cursor: pointer;
+    transform: translateY(-5px);
+  }
+
+ input[type="radio"] {
+  transform: scale(1.5);
 }
