--- a/qwizmain/templates/blocks/navigate.html
+++ b/qwizmain/templates/blocks/navigate.html
@@ -14,7 +14,7 @@
             <a href="{% url 'home' %}" class="nav-link">Главная</a>
           </li>
           <li class="nav-item ">
-            <a href="#" class="nav-link">Контакты</a>
+            <a href="{% url 'contact' %}" class="nav-link">Контакты</a>
           </li>
             <li class="nav-item ">
             <a href="http://127.0.0.1:8000/admin" class="nav-link">Админка</a>
@@ -29,7 +29,7 @@
           <a href="{% url 'signout' %}" class="btn btn-outline-light">Выход</a>
           {% else %}
         <a href="{% url 'signin' %}" class="btn btn-outline-light mr-2">Вход</a>
-        <a href="" class="btn btn-outline-light mr-2">Регистрация</a>
+        <a href="{% url 'signup' %}" class="btn btn-outline-light mr-2">Регистрация</a>
           {% endif %}
       </div>
     </nav>
