--- a/qwizmain/templates/contact.html
+++ b/qwizmain/templates/contact.html
@@ -1,9 +1,6 @@
 {% extends 'base.html' %}
 
 
-
-
-
 {% block title %} Контакт {% endblock %}
 
 
@@ -11,7 +8,8 @@
 {% block content %}
 
 
-<form id="contact_form" action="send-email.php" method="post">
+<form id="contact_form"  method="post">
+  {% csrf_token %}
 
   <label for="subject">Тема письма:</label>
   {{form.topic}}
