--- a/qwizmain/templates/question_detail.html
+++ b/qwizmain/templates/question_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 
-{% block title %} Главная Страница  {% endblock %}
+{% block title %} Qwiz-игра  {% endblock %}
 
 {% block content %}
 <div>
