--- a/qwizmain/templates/home.html
+++ b/qwizmain/templates/home.html
@@ -14,10 +14,10 @@
   <p>Test your knowledge with our fun and challenging quizzes. Choose from a variety of topics, and see how you stack up against other players.
   To continue please login</p>
   {% if user.is_authenticated %}
-  <a href="{% url 'game' %}" class="start-button">Start</a>
+  <a href="{% url 'game' %}" class="start-button hover-green green-button">Start</a>
   {% else %}
-    <a href="{% url 'signin' %}" class="start-button green-button">SignIn</a> or
-    <a href="" class="start-button green-button">SignUp</a>
+    <a href="{% url 'signin' %}" class="start-button green-button hover-green">SignIn</a> or
+    <a href="" class="start-button green-button hover-green">SignUp</a>
   {% endif %}
 </div>
 
