17,помоему самый ключевой момент , так как удалось добавить значение в кеше редиса и брать оттуда значение с помощью селери бит раз в 2 минуты и обновлять топ 10 рейтинг

--- a/qwizmain/templates/blocks/navigate.html
+++ b/qwizmain/templates/blocks/navigate.html
@@ -13,6 +13,9 @@
           <li class="nav-item active">
             <a href="{% url 'home' %}" class="nav-link">Главная</a>
           </li>
+            <li class="nav-item">
+            <a href="{% url 'top10' %}" class="nav-link">Топ10</a>
+          </li>
           <li class="nav-item ">
             <a href="{% url 'contact' %}" class="nav-link">Контакты</a>
           </li>
