--- a/qwizmain/static/css/style.css
+++ b/qwizmain/static/css/style.css
@@ -2,7 +2,7 @@ footer {
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 40px;
+  height: 50px;
   background-color: #000;
   color: #fff;
   text-align: center;
@@ -70,6 +70,7 @@ h3 {color:white}
   position: fixed;
   bottom: 20px;
   right: 20px;
+  margin-bottom:30px;
 }
 
 
@@ -98,6 +99,9 @@ h3 {color:white}
 		}
 
 
+
+#start_message{
+margin-top:20px;}
 
  #post_value {
     background-color: transparent;
@@ -182,4 +186,65 @@ margin-left:40px;
 margin-top:40px;
 
 }
+
+
+
+
+
+
+.text-light {
+  color: white;
+}
+
+.top-users {
+  background-color: #222;
+  color: white;
+  padding: 20px;
+  border: 1px solid #ccc;
+  margin-top:50px;
+}
+
+.top-users-heading {
+  margin-top: 0;
+  margin-bottom: 20px;
+  font-size: 28px;
+  text-align: center;
+}
+
+.top-users-table {
+  width: 100%;
+  border-collapse: collapse;
+  border: none;
+}
+
+.top-users-table th, .top-users-table td {
+  border: 1px solid #888;
+  padding: 10px;
+  text-align: center;
+}
+
+.top-users-table th {
+  font-size: 20px;
+  background-color: #444;
+}
+
+.top-users-name {
+  font-size: 18px;
+}
+
+.top-users-rating {
+  font-size: 16px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
