--- a/qwizmain/static/css/style.css
+++ b/qwizmain/static/css/style.css
@@ -63,14 +63,36 @@ h3 {color:white}
 
 
 
-
-
-
 #support_appear {
+  display: none;
+  background-color: rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  border-radius: 10px;
+  max-width: fit-content;
   position: fixed;
-  bottom: 20px;
-  right: 20px;
-  margin-bottom:30px;
+  bottom: 10px;
+  right: 10px;
+}
+
+#support_appear .close {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  font-size: 40px;
+  color: #fff;
+  cursor: pointer;
+}
+
+#support_appear p {
+  font-size: 18px;
+  margin: 10px 0;
+  color: #fff;
+  border-bottom: 1px solid #fff;
+  padding-bottom: 10px;
+}
+
+#support_appear p:last-of-type {
+  border-bottom: none;
 }
 
 
@@ -242,6 +264,37 @@ margin-top:40px;
 
 
 
+
+
+ .popup {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0,0,0,0.5);
+        display: none;
+        justify-content: center;
+        align-items: center;
+      }
+
+      /* Стили для контента в окне */
+      .popup-content {
+        background-color: white;
+        padding: 20px;
+        border-radius: 5px;
+        text-align: center;
+      }
+
+      /* Стили для кнопки в окне */
+      .popup-button {
+        background-color: #4CAF50;
+        border: none;
+        color: white;
+        padding: 10px;
+        border-radius: 5px;
+        cursor: pointer;
+      }
 
 
 
