--- a/qwizmain/static/css/style.css
+++ b/qwizmain/static/css/style.css
@@ -301,3 +301,33 @@ margin-top:40px;
 
 
 
+/* Style for char *//* Style for char *//* Style for char *//* Style for char *//* Style for char *//* Style for char */
+
+.chat-window {
+    width: 300px;
+    height: 400px;
+    border: 1px solid black;
+    overflow-y: scroll;
+}
+.chat-message {
+    margin: 10px;
+    padding: 5px;
+    border: 1px solid gray;
+    background-color: #f1f1f1;
+}
+/* Стили для формы чата */
+.chat-form {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+}
+.chat-form textarea {
+    height: 100px;
+    margin-bottom: 10px;
+    padding: 5px;
+}
+.chat-form button {
+    width: 100px;
+    align-self: flex-end;
+}
+
