--- a/qwizmain/templates/base.html
+++ b/qwizmain/templates/base.html
@@ -34,7 +34,8 @@
     {% include './blocks/footer.html' %}
 
 
-    <script src="{% static 'js/script.js' %}"></script>
+    <script type="application/javascript" src="{% static 'js/script.js' %}"></script>
 
   </body>
 </html>
+
