--- a/qwizmain/templates/blocks/navigate.html
+++ b/qwizmain/templates/blocks/navigate.html
@@ -19,6 +19,9 @@
           <li class="nav-item ">
             <a href="{% url 'contact' %}" class="nav-link">Контакты</a>
           </li>
+            <li class="nav-item ">
+            <a href="{% url 'chat' %}" class="nav-link" target="_blank">Чат</a>
+          </li>
             {% if user.is_authenticated %}
             <li class="nav-item ">
             <a href="{% url 'game' %}" class="nav-link">Игра</a>
