commit 30 - добавил стилей для чата , решил пару багов

--- a/qwizmain/templates/base.html
+++ b/qwizmain/templates/base.html
@@ -31,10 +31,15 @@
 {% endblock %}
 
 
+
+
     {% include './blocks/footer.html' %}
 
 
-    <script type="application/javascript" src="{% static 'js/script.js' %}"></script>
+    <script type="application/javascript" src="{% static 'js/script.js' %}">
+
+
+    </script>
 
   </body>
 </html>
