--- a/qwizmain/static/css/style.css
+++ b/qwizmain/static/css/style.css
@@ -331,3 +331,81 @@ margin-top:40px;
     align-self: flex-end;
 }
 
+
+
+#cheat-room-center{
+
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+height: 100vh;
+
+}
+
+
+
+#chat-log {
+  background-color: #f2f2f2;
+  border: 1px solid #ccc;
+  height: 200px;
+  overflow-y: scroll;
+  padding: 10px;
+  margin-bottom: 10px;
+  font-size: 14px;
+}
+
+#chat-message-input {
+  border: 1px solid #ccc;
+  padding: 10px;
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+
+#chat-message-submit {
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  padding: 10px;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+
+
+
+
+
+
+ /* Стили для чата входа !!! */ /* Стили для чата входа !!! */ /* Стили для чата входа !!! */ /* Стили для чата входа !!! */ /* Стили для чата входа !!! */
+#room-name-input {
+padding: 10px;
+font-size: 16px;
+border: 1px solid #ccc;
+border-radius: 4px;
+width: 100%;
+max-width: 500px;
+}
+
+#room-name-submit {
+background-color: #4CAF50;
+color: white;
+padding: 10px 20px;
+border: none;
+border-radius: 4px;
+cursor: pointer;
+font-size: 16px;
+margin-top: 10px;
+}
+
+#room-name-submit:hover {
+background-color: #3e8e41;
+}
+
+#chat-input-center {
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+height: 100vh;
+}
