--- a/qwizmain/templates/home.html
+++ b/qwizmain/templates/home.html
@@ -30,6 +30,43 @@
 </div>
 
 
+<div class="text-light">
+<h1>Test</h1>
+<h1>Test</h1>
+<h1>Test</h1>
+<h1>Test</h1>
+<h1>Test</h1>
+<h1>Test</h1>
+<h1>Test</h1>
+<h1>Test</h1>
+<h1>Test</h1>
+<h1>Test</h1>
+<h1>Test</h1>
+<h1>Test</h1>
+<h1>Test</h1>
+<h1>Test</h1>
+<h1>Test</h1>
+<h1>Test</h1>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!--<div class="popup" id="popup" style="display: none;" >-->
 <!--      <div class="popup-content">-->
 <!--        <h2>Хотите подписаться на нашу рассылку?</h2>-->
